# human-errors-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release-changelog.yml  rust-release.yml  rust-test.yml
src/: basic.rs  description.rs  error.rs  extend.rs  helpers.rs  kind.rs  lib.rs  option.rs  prelude.rs  pretty.rs  renderer.rs  result.rs  wrapper.rs
src/from/: mod.rs  std_io.rs  utf8.rs
