[package]
name = "human-errors"
version = "0.1.0"
description = "An error library focused on providing your users with relevant advice for any problem."
homepage = "https://sierrasoftworks.com/projects/human-errors"
readme = "README.md"
repository = "https://github.com/SierraSoftworks/human-errors-rs"
keywords = ["errors"]
categories = ["accessibility", "command-line-interface"]
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
