[package]
name = "human-errors"
version = "0.2.0"
description = "An error library focused on providing your users with relevant advice for any problem."
homepage = "https://sierrasoftworks.com/projects/human-errors"
readme = "README.md"
repository = "https://github.com/SierraSoftworks/human-errors-rs"
keywords = ["errors"]
categories = ["accessibility", "command-line-interface"]
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-boxes = { version = "0.1", optional = true }
colored = { version = "2.0", optional = true }
serde = { version = "1.0", optional = true }
textwrap = { version = "0.16.2", optional = true }

[features]
default = []
pretty = ["dep:cli-boxes", "dep:colored", "dep:textwrap"]
serde = ["dep:serde"]
